<resources>
    <string name="app_name">Autókölcsönző</string>
    <string name="wrong_username_or_password">Hibás felhasználónév vagy jelszó!</string>
    <string name="login_success">Sikeres belépés!</string>
    <string name="register_success">Sikeres regisztráció!</string>
    <string name="register_user_exist">A felhasználónév foglalt!</string>
    <string name="register_password_missmatch">A jelszavak nem egyeznek meg!</string>
    <string name="rent">KÖLCSÖNZÉS</string>
    <string name="rent_success">Sikeresen kikölcsönözted!</string>
    <string name="ok">OK</string>
    <string name="avaliable">ELÉRHETŐ</string>
    <string name="avaliable_non">NEM ELÉRHETŐ</string>
    <string name="na">-</string>
    <string name="login_title">JELENTKEZZ BE!</string>
    <string name="username">felhasználónév</string>
    <string name="login_text">bejelentkezés</string>
    <string name="registratiton_text">regisztráció</string>
    <string name="password">jelszó</string>
    <string name="back_button_text">vissza</string>
    <string name="register_title">Hozz létre egy fiókot!</string>
    <string name="password_re">jelszó újra</string>
    <string name="loading_title_top">CAR</string>
    <string name="loading_title_bottom">RENT</string>
    <string name="user_cars_title">AUTÓIM</string>
    <string name="nav_right"><![CDATA[>]]></string>
    <string name="nav_left"><![CDATA[<]]></string>
    <string name="car">AUTÓ:</string>
    <string name="car_price">ÁR:</string>
    <string name="date_title">IDŐ:</string>
    <string name="user_price">FIZETENDŐ:</string>
    <string name="cars">AUTÓK</string>
    <string name="back">VISSZA</string>
    <string name="give_back">VISSZAADÁS</string>
    <string name="pic_from_car">picFromCar</string>
    <string name="stats">STATISZTIKA</string>
    <string name="exit">KILÉPÉS</string>
    <string name="main_title">FŐOLDAL</string>
    <string name="stat">STATISZTIKA</string>
    <string name="state">ÁLLAPOT:</string>
    <string name="price">ÁR:</string>
    <string name="car_name">AUTÓ:</string>
    <string name="rent_stat">Bérlések aránya</string>
    <string name="rent_earn">Bevétel aránya</string>
</resources>