<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ProfileScreen"
    android:background="@color/darkGray">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/main_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="15dp">


        <Button
            android:id="@+id/myCars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_cars_title"
            app:cornerRadius="10dp" />
        <Button
            android:id="@+id/rentCars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cars"
            app:cornerRadius="10dp" />
        <Button
            android:id="@+id/stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            app:cornerRadius="10dp" />
        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:cornerRadius="10dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>